--- a/action.yml
+++ b/action.yml
@@ -23,6 +23,12 @@ inputs:
     required: false
     type: boolean
     default: false
+  request-reviews:
+    description: >
+      Requests reviews from teams or users needed to fulfill a requirement.
+    required: false
+    type: boolean
+    default: false
   token:
     description: >
       GitHub Access Token. The user associated with this token will show up
@@ -30,6 +36,7 @@ inputs:
       pull request data, create status checks (`repo:status`), and to read
       your organization's teams (`read:org`).
     required: true
+
 runs:
   using: node16
   main: dist/index.js
