--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@actions/github": "5.1.1",
 		"error": "10.4.0",
 		"js-yaml": "4.1.0",
+		"package.json": "^2.0.1",
 		"picomatch": "2.2.3"
 	},
 	"devDependencies": {
